--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
+  <link rel="stylesheet" href="css/styles.css">
   
   <title>Frontend Mentor | Space tourism website</title>
 </head>
 <body>
-
+<nav>
   00 Home
   01 Destination
   02 Crew
   03 Technology
+</nav>
 
   So, you want to travel to
   Space
