--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="/css/styles.css">
   
   <title>Frontend Mentor | Space tourism website</title>
 </head>
 <body>
 <nav>
+  <span class="logo"><img src="/assets/shared/logo.svg" alt="" srcset=""></span>
   00 Home
   01 Destination
   02 Crew
