--- a/index.html
+++ b/index.html
@@ -10,14 +10,77 @@
       sizes="32x32"
       href="./assets/favicon-32x32.png"
     />
-    <link rel="stylesheet" href="/css/styles.css" />
+    <!-- Google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;700&family=Bellefair&family=Barlow:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
 
-    <title>Space tourism website</title>
+    <!-- Our custom CSS -->
+    <link rel="stylesheet" href="css/styles.css" />
+    <title>Frontend Mentor | Space tourism website</title>
   </head>
   <body>
-    00 Home 01 Destination 02 Crew 03 Technology So, you want to travel to Space
-    Let’s face it; if you want to go to space, you might as well genuinely go to
-    outer space and not hover kind of on the edge of it. Well sit back, and
-    relax because we’ll give you a truly out of this world experience! Explore
+    <header class="primary-header flex">
+      <div>
+        <img
+          src="./assets/shared/logo.svg"
+          alt="space tourism logo"
+          class="logo"
+        />
+      </div>
+      <nav>
+        <ul class="primary-navigation underline-indicators flex">
+          <li class="active">
+            <a class="uppercase text-white letter-spacing-2" href="index.html"
+              ><span>00</span>Home</a
+            >
+          </li>
+          <li>
+            <a
+              class="uppercase text-white letter-spacing-2"
+              href="destination.html"
+              ><span>01</span>Destination</a
+            >
+          </li>
+          <li>
+            <a class="uppercase text-white letter-spacing-2" href="crew.html"
+              ><span>02</span>Crew</a
+            >
+          </li>
+          <li>
+            <a
+              class="uppercase text-white letter-spacing-2"
+              href="technology.html"
+              ><span>03</span>Technology</a
+            >
+          </li>
+        </ul>
+      </nav>
+    </header>
+
+    <div class="container flex">
+      <div class="grid">
+        <h1 class="text-accent fs-500 ff-sans-cond uppercase">
+          So, you want to travel to
+          <span class="text-white fs-900 ff-serif letter-spacing-1">Space</span>
+        </h1>
+        <p>
+          Let’s face it; if you want to go to space, you might as well genuinely
+          go to outer space and not hover kind of on the edge of it. Well sit
+          back, and relax because we’ll give you a truly out of this world
+          experience!
+        </p>
+      </div>
+      <div>
+        <a
+          href="#"
+          class="large-button uppercase ff-serif fs-600 text-dark bg-white"
+          >Explore</a
+        >
+      </div>
+    </div>
   </body>
 </html>
