--- a/design-system.html
+++ b/design-system.html
@@ -121,6 +121,7 @@
                             <button aria-selected="true"><span class="sr-only">Slide title</span></button>
                             <button aria-selected="false"><span class="sr-only">Slide title</span></button>
                             <button aria-selected="false"><span class="sr-only">Slide title</span></button>
+                            <!-- Hey there!!! -->
                         </div>
                         
                         <!-- Numbers -->
