--- a/index.html
+++ b/index.html
@@ -22,17 +22,19 @@
     <link rel="stylesheet" href="css/styles.css" />
     <title>Frontend Mentor | Space tourism website</title>
   </head>
-  <body>
+  <body class="bg">
     <header class="primary-header flex">
       <div>
         <img
           src="./assets/shared/logo.svg"
           alt="space tourism logo"
           class="logo"
+          style="width: 50px; margin-left: 40px; margin-top: 30px;"
         />
       </div>
       <nav>
-        <ul class="primary-navigation underline-indicators flex">
+        <ul class="primary-navigation underline-indicators flex" style="
+        padding-left: 500px;">
           <li class="active">
             <a class="uppercase text-white letter-spacing-2" href="index.html"
               ><span>00</span>Home</a
@@ -64,10 +66,10 @@
     <div class="container flex">
       <div class="grid">
         <h1 class="text-accent fs-500 ff-sans-cond uppercase">
-          So, you want to travel to
+          So, you want to travel to<br>
           <span class="text-white fs-900 ff-serif letter-spacing-1">Space</span>
         </h1>
-        <p>
+        <p class="slogan text-accent">
           Let’s face it; if you want to go to space, you might as well genuinely
           go to outer space and not hover kind of on the edge of it. Well sit
           back, and relax because we’ll give you a truly out of this world
